# chaiscript-sandbox

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
input/: initialize.chai
